@@ -18,7 +18,6 @@ class AccessControlProfile  {
  String customExpressionValidator ;
  String customExpression ;
  String objectsClass ;
- String objectsProviderStrategy ;
  String objects;
  Boolean autoGenerated;
 }
